# romkan-hs

./: LICENSE  README.md  romkan.cabal
NLP/: Romkan.hs
NLP/Romkan/: Internal.hs  Util.hs
Tests/: Tests.hs
