name:                romkan
version:             0.1.0.0
synopsis:            Japanese Romaji <-> Japanese Kana conversion library
description:         Romkan is a library to convert from Japanese Romaji to Japanese Kana and vice versa.
                     It is a port of python-romkan (http://www.soimort.org/python-romkan).
license:             BSD3
license-file:        LICENSE
author:              Karl Voigtland
maintainer:          karl.voigtland@gmail.com
-- copyright:           
category:            Natural Language Processing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.5 && <4.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
